@@ -131,4 +131,4 @@ importFrom(data.table,.SD)
 importFrom(dplyr,"%>%")
 importFrom(gofastr,as_dtm)
 importFrom(gofastr,as_tdm)
-importFrom(tm,stopwords)
+importFrom(stopwords,stopwords)
