@@ -20,7 +20,7 @@
 #' @param language The stem language to use (see  \code{\link[SnowballC]{wordStem}}).
 #' @param \ldots Other arguments passed to \code{\link[quanteda]{collocations}}.
 #' @return Retuns a data.frame of terms and frequencies.
-#' @importFrom tm stopwords
+#' @importFrom stopwords stopwords
 #' @importFrom data.table := .SD .N
 #' @keywords term word frequency
 #' @seealso \code{\link[quanteda]{collocations}}
@@ -31,7 +31,7 @@
 #'
 #' frequent_ngrams(x)
 #' frequent_ngrams(x, n = 50)
-#' frequent_ngrams(x, stopwords = c(tm::stopwords("en"), "american", "governor"))
+#' frequent_ngrams(x, stopwords = c(stopwords::stopwords("english"), "american", "governor"))
 #' frequent_ngrams(x, gram.length = 3)
 #' frequent_ngrams(x, gram.length = 3, stem = TRUE)
 #' frequent_ngrams(x, order.by = "lambda")
@@ -42,7 +42,7 @@
 #' plot(frequent_ngrams(x, gram.length = 3))
 #' }
 frequent_ngrams <- function(text.var, n = 20, gram.length = 2:3,
-    stopwords = tm::stopwords("en"), min.char = 4,
+    stopwords = stopwords::stopwords("english"), min.char = 4,
     max.char = Inf, order.by = "frequency", stem = FALSE, language = "porter", ...) {
 
     wc <- collocation <- id <- terms <- len <- low <- high <- sw <- keep <- NULL
@@ -178,7 +178,7 @@ plot.frequent_ngrams <- function(x, drop.redundant.yaxis.text = TRUE,
 
 ## have to filter out any that were less than n in length
 termco_collocations <- function(x, size = 2:3, order.by = 'frequency',
-    stopwords = tm::stopwords("en"), min.char = 4, max.char = Inf, ...){
+    stopwords = stopwords::stopwords("english"), min.char = 4, max.char = Inf, ...){
 
     terms <- wc <- collocation <- id <- terms <- len <- low <- high <- sw <- keep <- NULL
 
